<resources>
    <string name="app_name">Presentación</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">David Ferney Cruz</string>
    <string name="nav_header_subtitle">davidferneycruz@gmail..com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_biografia">Biografía Personal</string>
    <string name="menu_galeria">Galeria Fotográfica</string>
    <string name="menu_estudio">Estudios</string>
    <string name="menu_familia">Familia</string>
    <string name="menu_mascota">Mascota</string>
    <string name="proyectos">Proyectos</string>

    <!-- TODO: Textos en strings -->
    <!-- Texto de biografia -->
    <string name="biografia01">Mi Nombre es: David Ferney Cruz Naci en Chiquinquirá boyacá Colombia el dia 15 de febrero de 1992, nací en el hospital ESE Hospital Regional de la ciudad, soy hijo de David Alberto Cruz Castro y Fanny Cristina Cruz Parra, mis padres se dedican al mantenimiento y reperación de toca clase de electrodomésticos, mi primaria yo la realice en la escule Normal Superior "anexa" fui un poco extrovertido e indisciplinado en esa epoca, era un pequeño terremoto; de ahi pase a estudiar al Instituto Tecnico Industrial "Julio Florez" en este colegio ocupaba los primeros lugares y me destacaba por mi rendimiento academico y participación, me gradue con honores de la especialidad de dibuje tecnico. con el titulo de Bachiller Tecnico en la especialidad de Dibujo Tecnico. </string>
    <string name="biografia02">Acontinuación tome la desicion de incorporarme a presetar mi servicio militar a la Fuerza Aerea colombiana, alli estuve internado durante 18 meses en diferentes bases aereas (CATAM, CACOM 1,CACOM 5, Y GAORI) En esta maravillosa institución aprendi a ser mas ordenado, a recibir y dar ordenes, a valorar a la familia. </string>
    <string name="biografia03">Al culminar mi servicio militar obligatorio, ingrese a otra gran institución llamada el SENA, alli estudie un Tecnico en Construcción de Edificaciones y aprendi bastante y me gradue de forma satisfactoria</string>
    <string name="biografia04">Luego entre a la universidad Unisangil con sede en Chiquinquirá - Boyacá a estudiar una extraordinaria carrera llamada Ingenieria de Sistemas</string>
    <string name="biografia05">En este momento me encuentro laborando en DATACENTER COLOMBIA como Desarrollador Nivel 1 en Android e iOS</string>

    <!-- Texto de proyecto -->
    <string name="mascotalotila">GATITA LOLA</string>
    <string name="presentacionlola">Les presento a mi gata Lola, la raza de ella es Australian Mist es una raza de gato desarrollada en Australia. Es un cruce entre el gato abisinio y el gato birmano.</string>
    <string name="regalo">A Lolita me la regalo una gran amiga llamada Sara, me la regalo cuando era una bebesita, y la he cuidado muy bien, hasta el momento esta muy bella y muy bonita, Lola se la pasa comiendo y Durmiendo y en ocaciones jugando, es muy juguetona y cariñosita.</string>

    <!-- Texto de proyecto -->
    <string name="Proyecto01"> • Montar una empresa de desarrollo de Software</string>
    <string name="Proyecto02"> • Estudiar una especialización tecnologica</string>
    <string name="Proyecto03"> • Seguir creciendo profesionalmente</string>
    <string name="Proyecto04"> • Impartir y brindar conocimiento a otros</string>

    <!-- Texto de estudios -->
    <string name="Estudios01"> • Bachiller tecnico </string>
    <string name="Estudios02"> • Tecnico en construcción de edificaciones</string>
    <string name="Estudios03"> • Ingeniero de sistemas</string>

    <!-- Texto de familia -->
    <string name="familia01"> Les presento a mi linda y querida familia </string>

</resources>