<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Proyectos">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:text="@string/Proyecto01"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="80dp"
        android:text="@string/Proyecto02"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="110dp"
        android:text="@string/Proyecto03"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/Proyecto04"
        android:textColor="#000000" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="272dp"
        android:layout_height="195dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="71dp"
        android:layout_marginLeft="71dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:src="@mipmap/work" />


</RelativeLayout>