<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mascota">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/mascotalotila"
        android:textColor="#007A05"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="297dp"
        android:layout_height="289dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:src="@mipmap/gata" />

    <com.codesgood.views.JustifiedTextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_below="@id/imageView2"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20sp"
        android:justificationMode="inter_word"
        android:text="@string/presentacionlola"
        android:textColor="#000000"
        android:textSize="16dp" />

    <com.codesgood.views.JustifiedTextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView1"
        android:layout_marginTop="20dp"
        android:text="@string/regalo"
        android:textColor="#000000"
        android:layout_marginRight="20sp"
        android:layout_marginLeft="20sp"
        android:textSize="16dp"
        android:justificationMode="inter_word" />

</RelativeLayout>