<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".estudio">


    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/Estudios01"
        android:textColor="#000000"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:text="@string/Estudios02"
        android:textColor="#000000"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-18dp"
        tools:layout_editor_absoluteY="49dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="80dp"
        android:text="@string/Estudios03"
        android:textColor="#000000"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="102dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="284dp"
        android:layout_height="154dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:src="@mipmap/pro" />

</RelativeLayout>

