<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--- TEXTOS CON LA INFORMACION -->
            <!--- Se define id o identificador, margenes izq y der, texto, color, y tamaño  -->
            <com.codesgood.views.JustifiedTextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/biografia01"
                android:textColor="#000000"
                android:textSize="16dp"
                tools:layout_editor_absoluteX="16dp" />

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView1"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/biografia02"
                android:textColor="#000000"
                android:textSize="16dp"/>

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView2"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/biografia02"
                android:textColor="#000000"
                android:textSize="16dp"/>

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/biografia03"
                android:textColor="#000000"
                android:textSize="16dp"/>

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView4"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/biografia05"
                android:textColor="#000000"
                android:textSize="16dp"/>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="141dp"
                android:layout_height="211dp"
                android:layout_below="@+id/textView5"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30sp"
                android:scaleType="centerCrop"
                android:src="@mipmap/person" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>